Post update: Зачем это все?

--- a/_posts/2015-10-30-.markdown
+++ b/_posts/2015-10-30-.markdown
@@ -11,9 +11,9 @@ layout: post
 
 # Как я докатился до блога на гитхабе
 
-Поиски продолжались довольно долго. 
+Поиски продолжались довольно долго.
 
-Первым в списке был [_Tumblr_](tumblr.com), который я отсек почти сразу, ибо он как-то больше ориентирован на картиночки. Да и вообще выглядит как твиттер с длинными постами (BTW, поговаривают, что в последнем хотят убрать ограничение в 140 символов - пожалуй, главную его фишку). 
+Первым в списке был [_Tumblr_](tumblr.com), который я отсек почти сразу, ибо он как-то больше ориентирован на картиночки. Да и вообще выглядит как твиттер с длинными постами (BTW, поговаривают, что в последнем хотят убрать ограничение в 140 символов - пожалуй, главную его фишку).
 
 ЖЖ я даже не рассматривал. Сайт с такой убогой версткой в 2015 году - это неприемлемо.
 
@@ -23,4 +23,10 @@ layout: post
 
 Далее были метания по всяким мелким (и местами странным) платформам, но у всех были проблемы - либо нет поддержки Markdown, либо оно тормозит страшно, либо еще чего.
 
-И вот, листая очередную подборку блогоплатформ, я наткнулся на [_TinyPress_](tinypress.co). Простой и минималистичный, с полной поддержкой Markdown, с возможностью запостить путем отправки имейла. И с хостингом на гитхабе.
+И вот, листая очередную подборку блогоплатформ, я наткнулся на [_TinyPress_](tinypress.co). Простой и минималистичный, с полной поддержкой Markdown, с возможностью запостить путем отправки имейла. И с хостингом на гитхабе. Единственная проблема тут в том, что превью не работает. Но я пишу посты в [Atom](https://atom.io/) (видео у них на сайте, кстати, очень годное), где есть свое превью, так что это не критично.
+
+# О чем же этот бложек?
+
+В основном тут скорее всего будет всякая фигня, что приходит мне в голову в связи с тем, что происходит вокруг меня. А еще я тут взялся учиться погромировать, так что и по этому поводу что-нибудь тоже буду время от времени писать.
+
+За сим откланиваюсь. И так уже длинную простыню накатал.
