--- a/_posts/2016-03-31-.markdown
+++ b/_posts/2016-03-31-.markdown
@@ -6,6 +6,6 @@ permalink: moving-out
 ---
 Сообщаю вам, что бложек переезжает. 
 
-Вскоре будет доступен по адресу hamools-corner.ru
+Вскоре будет доступен по адресу [hamools-corner.ru](hamools-corner.ru)
 
 Там будут некоторые классные фичи вроде коментов. Да и вообще выглядеть оно будет лучше.
